<resources>
  <string name="app_name">Smarthome</string>
  <string name="title_activity_main">Smarthome</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="nav_item_devices">Device manager</string>
  <string name="nav_item_controllers">Controller manager</string>
  <string name="nav_sub_menu">Sub Menu</string>
  <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
  <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
  <string name="drawer_header_text">Drawer Header</string>
  <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
  <string name="title_activity_second">SecondActivity</string>
  <string name="widget_tab_title">Smart Home Console</string>

  <string name="navigation_drawer_open">Open</string>
  <string name="navigation_drawer_close">Close</string>
  <string name="title_activity_device_manager">Device Manager</string>
  <string name="title_activity_controller_manager">Controller Manager</string>

  <string name="general_io_exception">I/O exception occured</string>

  <string name="device_manager_modify_item">Modify</string>
  <string name="device_manager_delete_item">Delete</string>
  <string name="title_activity_device_edit">Edit device</string>
  <string name="device_edit_name">Name</string>
  <string name="device_edit_active">Active</string>
  <string name="device_edit_type">Type</string>
  <string name="device_edit_save_action">Save</string>
  <string name="device_edit_cancel_action">Cancel</string>
  <string name="device_edit_name_empty_error">Please enter device name</string>

  <string name="controller_manager_modify_item">Modify</string>
  <string name="controller_manager_delete_item">Delete</string>
  <string name="controller_activity_device_edit">Edit controller</string>
  <string name="controller_edit_name">Name</string>
  <string name="controller_edit_ip_address">IP address</string>
  <string name="controller_edit_active">Active</string>
  <string name="controller_edit_type">Type</string>
  <string name="controller_edit_save_action">Save</string>
  <string name="controller_edit_cancel_action">Cancel</string>
  <string name="controller_edit_name_empty_error">Please enter controller name</string>
  <string name="controller_type_name">Сontroller type</string>
  <string name="controller_type_active">Active</string>

  <string name="cmd_fragment_title">COMMANDS</string>
  <string name="scnr_fragment_title">SCENARIOS</string>

  <string name="cmd_fab_action_add_cmd">Create command</string>
  <string name="cmd_fab_action_add_scnr">Create scenario</string>

  <string name="title_activity_cmd_edit">Edit command</string>
  <string name="cmd_list_modify_item">Modify</string>
  <string name="cmd_list_delete_item">Delete</string>
  <string name="cmd_edit_name">Name</string>
  <string name="cmd_edit_active">Active</string>
  <string name="cmd_edit_type">Command type</string>
  <string name="cmd_edit_controller">Controller</string>
  <string name="cmd_edit_device">Device</string>
  <string name="cmd_edit_value">Command value</string>
  <string name="cmd_edit_save_action">Save</string>\
  <string name="cmd_edit_cancel_action">Cancel</string>
  <string name="cmd_edit_name_empty_error">Please enter command name</string>

  <string name="task_connecting">Connecting to the IR device...</string>
  <string name="task_sent_command">Command sent...</string>
  <string name="task_starting">Starting...</string>
  <string name="task_cancelled">Task was cancelled by user</string>
  <string name="task_completed">Command execution was completed</string>
  <string name="task_completed_with_errors">Command execution was completed with errors</string>
  <string name="task_timeout_after">Waiting for the next command</string>
  <string name="task_ready_for_the_next_task">Ready for the next command execution</string>

  <string name="task_queue_empty_exception">Task queue is empty</string>
  <string name="task_malformed_url_exception">The incorrect url detected. Please correct the url and execute command/scenario again.</string>
  <string name="task_io_exception">The URL specified in command is unreachable or you don\'t have access to it.</string>

  <string name="scenario_execution_interrupted_exception">Scenario execution was interrupted</string>
  <string name="scenario_cancelled">Scenario was cancelled by user</string>
  <string name="scenario_completed">Scenario execution was completed</string>
  <string name="scenario_execution">Scenario execution</string>

  <string name="scnr_fab_action_add_cmd">Create command</string>
  <string name="scnr_fab_action_add_scnr">Create scenario</string>
  <string name="title_activity_scnr_edit">Edit scenario</string>
  <string name="scnr_edit_title">Scenario edit.</string>
  <string name="scnr_edit_name">Name</string>
  <string name="scnr_edit_active">Active</string>
  <string name="scnr_edit_cmd_list_view">Scenario commands:</string>
  <string name="scnr_edit_save_action">Save</string>
  <string name="scnr_edit_cancel_action">Cancel</string>
  <string name="scnr_edit_name_empty_error">Please enter scenario name</string>
  <string name="scnr_edit_save_to_db_error">There were some problems with saving this command, please check your data and try again</string>
  <string name="scnr_edit_delete_from_db_error">There were some problems with deleting this command, please check your data and try again</string>
  <string name="scnr_list_modify_item">Modify</string>
  <string name="scnr_list_delete_item">Delete</string>
  <string name="cmd_in_scnr_list_remove_cmd">Remove</string>
  <string name="cmd_in_scnr_list_change_after_cmd_timeout">Timeout</string>
  <string name="cmd_in_scnr_list_removed_cmd_successfully">Command was removed successfully</string>
  <string name="timeout_after_cmd_dialog_title">Select wait time after command execution (sec)</string>
  <string name="timeout_after_cmd_cancel">Cancel</string>
  <string name="timeout_after_cmd_set">Set</string>
  <string name="cmd_in_scnr_list_after_cmd_timeout">Timeout after: %d seconds</string>

  <string name="title_activity_cmd_pick">Select required command.</string>
</resources>