<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="ru.marat.smarthome.command.edit.CmdEditActivity"
  tools:showIn="@layout/activity_cmd_edit">
  <RelativeLayout
    android:id="@+id/content_cmd_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
      android:id="@+id/cmd_edit_name_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:text="@string/device_edit_name" />

    <EditText
      android:id="@+id/cmd_edit_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_name_text" />

    <TextView
      android:id="@+id/cmd_edit_active_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_name"
      android:text="@string/cmd_edit_active" />

    <CheckBox
      android:id="@+id/cmd_edit_active"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_active_text"
      android:checked="true" />

    <TextView
      android:id="@+id/cmd_edit_type_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_active"
      android:text="@string/cmd_edit_type" />

    <Spinner
      android:id="@+id/cmd_edit_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_type_text" />

    <TextView
      android:id="@+id/cmd_edit_controller_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_type"
      android:text="@string/cmd_edit_controller" />

    <Spinner
      android:id="@+id/cmd_edit_controller"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_controller_text" />

    <TextView
      android:id="@+id/cmd_edit_device_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_controller"
      android:text="@string/cmd_edit_device" />

    <Spinner
      android:id="@+id/cmd_edit_device"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_device_text" />

    <TextView
      android:id="@+id/cmd_edit_value_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_device"
      android:scrollbars="vertical"
      android:text="@string/cmd_edit_value" />

    <EditText
      android:id="@+id/cmd_edit_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/cmd_edit_value_text"
      android:gravity="top|left"
      android:inputType="textMultiLine"
      android:lines="8"
      android:maxLines="10"
      android:minLines="6" />


  </RelativeLayout>
</android.support.v4.widget.NestedScrollView>