<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/content_device_edit"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="ru.marat.smarthome.controller.edit.ControllerEditActivity"
  tools:showIn="@layout/activity_controller_edit">

  <TextView
    android:id="@+id/controller_edit_name_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/controller_edit_name" />

  <EditText
    android:id="@+id/controller_edit_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/controller_edit_name_text" />

  <TextView
    android:id="@+id/controller_edit_ip_address_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/controller_edit_name"
    android:text="@string/controller_edit_ip_address" />

  <EditText
    android:id="@+id/controller_ip_address"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/controller_edit_ip_address_text" />

  <TextView
    android:id="@+id/controller_edit_active_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/controller_ip_address"
    android:text="@string/controller_edit_active" />

  <CheckBox
    android:id="@+id/controller_edit_active"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/controller_edit_active_text"
    android:checked="true" />

  <TextView
    android:id="@+id/controller_edit_type_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/controller_edit_active"
    android:text="@string/controller_edit_type" />

  <Spinner
    android:id="@+id/controller_edit_type"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/controller_edit_type_text" />

</RelativeLayout>
